Changes in QMPlay2 build 16.07.26:
	- OpenGL2 bugfix,

Changes in QMPlay2 build 16.07.20:
	- don't fetch the stream url twice on add and play action (speed up YouTube video opening),
	- move most settings Ui from C++ to Qt forms (thanks Zamarin Arthur for help),
	- play the entire audio if playback has been finished (don't drop samples),
	- block screen saver also on full screen when only audio is playing,
	- add sharpness to video adjustment (OpenGL2 and VDPAU only),
	- add key bindings (currently only in settings file),
	- sort current group instead of entire playlist,
	- HW and SW filters settings in the same place,
	- rename video equalizer -> video adjustment,
	- fix OGG pictures for taglib 1.11 and newer,
	- fix bug in tag editor (non-Windows OS'es),
	- updated Russian translation (victorr2007),
	- fix downloading cover art from Last.fm,
	- move OpenGL2 shaders to resources,
	- handle multimedia keys on Windows,
	- properly handle chained OGG files,
	- add sharpness shader to OpenGL2,
	- display toolbar in compact view,
	- move online contents to GitHub,
	- Windows updater fixes,
	- add contributors tab,
	- bugfix,

Changes in QMPlay2 build 16.07.07:
	- Ubuntu Unity integration (MPRIS2 and shortcut groups),
	- added video equalizer to "Settings/Video filters",
	- new "Concept" icons by Alexey Varfolomeev,
	- updated Russian translation (victorr2007),
	- properly add many files containing tracks,
	- better detection of subtitles text codec,
	- handle audio parameters changes,
	- MPRIS2, CMake and PLS fixes,

Changes in QMPlay2 build 16.07.02:
	- update pause and buffered data information when demuxer is busy,
	- move "modules" directory from "share/qmplay2" to "lib/qmplay2",
	- allow file group and Audio CD tracks synchronization:
		- synchronize automatically when loading the same playlist into a group,
		- synchronize automatically when loading Audio CD tracks,
		- on "F5" key,
	- show more warnings in VDPAU and appearance settings,