@@ -849,6 +849,10 @@ amp</translation>
         <source>Screenshots path</source>
         <translation>Pfad für Bildschirmfotos</translation>
     </message>
+    <message>
+        <source>Set key bindings</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>Help</name>
@@ -893,6 +897,13 @@ amp</translation>
     <message>
         <source>Tone generator</source>
         <translation>Frequenzgenerator</translation>
+    </message>
+</context>
+<context>
+    <name>KeyBindingsDialog</name>
+    <message>
+        <source>Key bindings settings</source>
+        <translation type="unfinished"></translation>
     </message>
 </context>
 <context>
@@ -2396,6 +2407,17 @@ It copies decoded video frame to system RAM, so it can be slow!</source>
     </message>
     <message>
         <source>Hardware accelerated video outputs</source>
+        <translation type="unfinished"></translation>
+    </message>
+</context>
+<context>
+    <name>ShortcutHandler</name>
+    <message>
+        <source>Action</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Key sequence</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
