@@ -848,6 +848,10 @@ amp</source>
         <source>Screenshots path</source>
         <translation>截图保存路径</translation>
     </message>
+    <message>
+        <source>Set key bindings</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>Help</name>
@@ -892,6 +896,13 @@ amp</source>
     <message>
         <source>Tone generator</source>
         <translation>音频发生器</translation>
+    </message>
+</context>
+<context>
+    <name>KeyBindingsDialog</name>
+    <message>
+        <source>Key bindings settings</source>
+        <translation type="unfinished"></translation>
     </message>
 </context>
 <context>
@@ -2382,6 +2393,17 @@ It copies decoded video frame to system RAM, so it can be slow!</source>
     </message>
     <message>
         <source>Hardware accelerated video outputs</source>
+        <translation type="unfinished"></translation>
+    </message>
+</context>
+<context>
+    <name>ShortcutHandler</name>
+    <message>
+        <source>Action</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <source>Key sequence</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
