@@ -1,4 +1,5 @@
 Changes in QMPlay2 build 16.07.26:
+	- add key shortcuts editor to Settings (thanks Zamarin Arthur for help),
 	- OpenGL2 bugfix,
 
 Changes in QMPlay2 build 16.07.20:
